add send email function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#EMAIL
+spring.mail.host=smtp.gmail.com
+spring.mail.port= 25
+spring.mail.username= test
+spring.mail.password= test
